--- a/style.css
+++ b/style.css
@@ -1,17 +1,16 @@
 .navimg 
 {
     padding-right: 10px;
-    padding-left: 10px;
+    margin-left: 10px;
 }
 
 .container
 {
-    margin-top: 80px;
+    margin-top: 40px;
     font-family: Roboto;
-    font-style: normal;
-    font-weight: 400;
     font-size: 16px;
     line-height: 24px;
+    color: #000;
 }
 
 .size-sign
@@ -60,8 +59,9 @@
     padding-right: 3px;
 }
 
-.footer
+.foot
 {
+    border-top: 1px solid lightgray;
     font-family: Roboto;
     font-weight: 400;
     font-size: 16px;
