--- a/style.css
+++ b/style.css
@@ -4,9 +4,19 @@
     margin-left: 10px;
 }
 
+.body
+{
+    font-size: 18px;
+    scroll-behavior: smooth;
+    color: var(--black-text);
+    font-family: 'Roboto', sans-serif;
+}
+
+
 .container
 {
     margin-top: 40px;
+    margin-bottom: 40px;
     font-family: Roboto;
     font-size: 16px;
     line-height: 24px;
@@ -42,15 +52,25 @@
     border-bottom-color: #f3f3f3;
 }
 
+.item_desc
+{
+    color: #9e9e9e;
+}
+
 .order-s
 {
     background-color: #f6f6f6;
+    padding: 20px;
+    border-radius: 4px;
+    width: 326px; 
+    height: 252px;
 }
 
 .checkout 
 {
     background-color: #f6f6f6;
     padding-top: 5px;
+    padding: 15px;
 
 }
 
@@ -59,11 +79,101 @@
     padding-right: 3px;
 }
 
-.foot
+.foote
 {
-    border-top: 1px solid lightgray;
-    font-family: Roboto;
-    font-weight: 400;
     font-size: 16px;
     line-height: 26px;
+}
+
+/*-- Quantity Box--*/
+.quanty 
+{
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+.quantity-controller {
+    border-radius: 4px;
+    border: 1.9px solid #dcdcdc;
+    padding: 0;
+    display: inline-block;
+
+}
+
+.quantity-button {
+    outline: none;
+    border: none;
+    background-color: #fff;
+    font-weight: 400;
+    font-size: 17px;
+    padding: 0 10px;
+    height: 30px;
+}
+
+.quantity-button:focus {
+    outline: none;
+}
+
+.quantity-text {
+    display: inline-block;
+    margin-bottom: 0;
+    text-align: center;
+    font-weight: 400;
+    font-size: 17px;
+    min-width: 42px;
+    max-width: 59px;
+    border: none;
+    outline: none;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type='number'] {
+    -moz-appearance: textfield; /* Firefox */
+}
+
+.active-button {
+    color: #000;
+}
+
+.inactive-button {
+    color: #bdbdbd;
+}
+
+.change_link
+{
+    text-decoration: none;
+    color: black;
+    margin-right: 4px;
+}
+
+.remove_link
+{
+    text-decoration: none;
+    color: #C60000;
+}
+
+.header_btn
+{
+    background-color: #06415D; 
+    color: white;
+    padding: 10px;
+    width: 192px;
+    height: 52px;
+}
+
+.table_summary tr
+{
+    padding: 20px;
+}
+
+.checkout_tr
+{
+    padding-top: 10px;
+    border-bottom: 1px solid #ebebeb;
 }
