--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     margin-left: 10px;
 }
 
-.body
+body
 {
     font-size: 18px;
     scroll-behavior: smooth;
@@ -57,6 +57,11 @@
     color: #9e9e9e;
 }
 
+.t-head th{
+    font-weight: 400;
+}
+
+
 .order-s
 {
     background-color: #f6f6f6;
@@ -70,8 +75,16 @@
 {
     background-color: #f6f6f6;
     padding-top: 5px;
-    padding: 15px;
+    padding: 20px;
+    width: 326px; 
+    margin-top: 30px;
+    font-size: 18px;
 
+}
+
+.checkout_price
+{
+    font-size: 20px;
 }
 
 .first 
@@ -97,6 +110,7 @@
     border: 1.9px solid #dcdcdc;
     padding: 0;
     display: inline-block;
+    margin-top: 35px;
 
 }
 
@@ -149,7 +163,7 @@ input[type='number'] {
 {
     text-decoration: none;
     color: black;
-    margin-right: 4px;
+    margin-right: 10px;
 }
 
 .remove_link
@@ -162,9 +176,10 @@ input[type='number'] {
 {
     background-color: #06415D; 
     color: white;
-    padding: 10px;
-    width: 192px;
-    height: 52px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-right: 25px;
+    padding-left: 25px;
 }
 
 .table_summary tr
@@ -174,6 +189,40 @@ input[type='number'] {
 
 .checkout_tr
 {
-    padding-top: 10px;
+    padding-top: 25px;
+    padding-bottom: 25px;
     border-bottom: 1px solid #ebebeb;
+}
+
+.checkout_ltr
+{
+    padding-top: 20px;
+}
+
+.footer_img
+{
+    padding: 5px;
+}
+
+.footer_img_div
+{
+    padding-left: 120px;
+}
+
+.checkout_btn
+{
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+.price_margin
+{
+    margin-top: 39px;
+}
+
+.footer_links
+{
+    padding-right: 10px;
 }
