--- a/style.css
+++ b/style.css
@@ -55,6 +55,8 @@ body
 .item_desc
 {
     color: #9e9e9e;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .t-head th{
@@ -68,7 +70,7 @@ body
     padding: 20px;
     border-radius: 4px;
     width: 326px; 
-    height: 252px;
+    height: 240px;
 }
 
 .checkout 
@@ -159,6 +161,11 @@ input[type='number'] {
     color: #bdbdbd;
 }
 
+.table
+{
+    color: #000;
+}
+
 .change_link
 {
     text-decoration: none;
@@ -180,6 +187,7 @@ input[type='number'] {
     padding-bottom: 12px;
     padding-right: 25px;
     padding-left: 25px;
+    box-shadow: 0px 0px 4px #06415D;
 }
 
 .table_summary tr
@@ -189,8 +197,6 @@ input[type='number'] {
 
 .checkout_tr
 {
-    padding-top: 25px;
-    padding-bottom: 25px;
     border-bottom: 1px solid #ebebeb;
 }
 
